--- a/Read/ReadAndroid/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/06.卡顿监控设计实践.md
@@ -274,7 +274,8 @@
     - https://github.com/markzhai/AndroidPerformanceMonitor
 - 卡顿监控
     - https://github.com/Knight-ZXW/BlockCanaryX
-    
+- Android卡顿监测的方方面面
+  - https://mp.weixin.qq.com/s/-pfWolCWNK326JEkWNUbew
 
 
 
