--- a/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
+++ b/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
@@ -5,19 +5,28 @@
     - 1.3 常见方式
     - 1.4 设计目标
     - 1.5 收益分析
-- 02.代码安全例子
-    - 2.1 条件判断代码
-    - 2.2 异常不要携带重要信息
-    - 2.3 序列化安全问题
-    - 2.4 三方库lib中类安全
-    - 2.5 反射代码安全
-    - 2.6 扫描漏洞安全
-    - 2.9 作弊器攻击问题
+- 02.项目安全风险
+    - 2.1 移动安全有哪些
+    - 2.2 反编译安全风险
+    - 2.3 so库破解风险
+    - 2.4 中间人攻击风险
+    - 2.5 代码安全风险
 - 03.一些安全防御实践
     - 3.1 本地加密
+    - 3.2 proguard混淆
     - 3.3 接口签名
     - 3.4 TCP协议安全攻击
     - 3.5 防抓包安全
+    - 3.6 so库加固检测
+- 04.代码安全例子
+    - 4.1 条件判断代码
+    - 4.2 异常不要携带重要信息
+    - 4.3 序列化安全问题
+    - 4.4 三方库lib中类安全
+    - 4.5 反射代码安全
+    - 4.6 扫描漏洞安全
+    - 4.7 公共组件安全
+    - 4.9 作弊器攻击问题
 - 06.方案基础设计
     - 6.1 整体架构图
     - 6.2 UML设计图
@@ -77,86 +86,58 @@
 #### 1.5 收益分析
 
 
-### 02.代码安全例子
-#### 2.1 条件判断代码
-- 首先，我们一起来看一段不起眼的条件判断代码，这里可能有什么问题吗？你可能会纳闷，这是再常见不过的一个条件判断了，能有什么安全隐患？
-    ```
-    // a, b, c 都是 int 类型的数值
-    if (a + b < c) {
-        // …
-    }
-    ```
-    - 这里的隐患是数值类型需要防范溢出，否则这不仅仅可能会带来逻辑错误，在特定情况下可能导致严重的安全漏洞。
-    - 从语言特性来说，Java 和 JVM 提供了很多基础性的改进，相比于传统的 C、C++等语言，对于数组越界等处理要完善的多，原生的避免了缓冲区溢出等攻击方式，提高了软件的安全性。但这并不代表完全杜绝了问题，Java 程序可能调用本地代码，也就是 JNI 技术，错误的数值可能导致 C/C++ 层面的数据越界等问题，这是很危险的。
-- 所以，上面的条件判断，需要判断其数值范围，例如，写成类似下面结构。
-    ```
-    if (a < c – b)
-    ```
 
 
-#### 2.2 异常不要携带重要信息
-- 再来看一个例子，请看下面的一段异常处理代码：
-    ```
-    try {
-        // 业务代码
-    } catch (Exception e) {
-        throw new RuntimeException(hostname + port + “ doesn’t response”);
-    }
-    ```
-    - 这段代码将敏感信息包含在异常消息中，试想，如果是一个应用，异常也没有良好的包装起来，很有可能就把内部信息暴露给终端客户。
-    - 对于安全标准特别高的系统，甚至可能要求敏感信息被使用后，要立即明确在内存中销毁，以免被探测；或者避免在发生 core dump 时，意外暴露。
+### 02.项目安全风险
+#### 2.1 移动安全有哪些
+- App的移动安全主要包括下面几种：
+    - 密钥破解，导致本地加密数据被盗取
+    - 通信密钥破解，导致接口数据被盗取
+    - 伪造接口数据上报
+    - 接口签名被破解，导致接口可以被重放攻击
+- 那么归结起来，实际上就是这样几种模式：
+    - 代码反编译
+    - so破解
+    - 中间人攻击
 
 
 
-#### 2.3 序列化安全问题
-- Java 提供了序列化等创新的特性，广泛使用在远程调用等方面，但也带来了复杂的安全问题。直到今天，序列化仍然是个安全问题频发的场景，通常建议：
-    - 敏感信息不要被序列化！在编码中，建议使用 transient 关键字将其保护起来。
-    - 反序列化中，建议在 readObject 中实现与对象构件过程相同的安全检查和数据检查。
-- 另外，在 JDK 9 中，Java引入了过滤器机制，以保证反序列化过程中数据都要经过基本验证才可以使用。
-    - 其原理是通过黑名单和白名单，限定安全或者不安全的类型，并且你可以进行定制，然后通过环境变量灵活进行配置，会更加具体的使用你可以参考 ObjectInputFilter。
+#### 2.3 so库破解风险
 
 
 
-#### 2.4 三方库lib中类安全
-- 看到很多第三方库，比如gson，rxJava等库，几乎大多数类都是用finial修饰的。这个是为什么呢？
-- 当用final修饰一个类时，表明这个类不能被继承。也就是说，如果一个类你永远不会让他被继承，就可以用final进行修饰。final类中的成员变量可以根据需要设为final，但是要注意final类中的所有成员方法都会被隐式地指定为final方法。
-- 很多类，不想被开发者继承，为了内部安全。同时也避免反射攻击，所以就用finial修饰。这也是一种保证类安全的有效做法。
+
+#### 2.4 中间人攻击风险
 
 
-#### 2.6 扫描漏洞安全
-- Activity 组件对外暴露风险
-    - Activity 组件对外暴露，且未做权限控制，可能会造成信息泄露、劫持利用、拒绝服务等风险。
-- 漏洞位置
-    ``` java
-    <activity android:name="com.yc.library.web.WebViewActivity"
-        android:exported="true"/>
-    ```
-- 修复建议
-    - 如果应用的 Activity 组件不必要对外，或者组件配置了intent filter标签，建议显示设置组件的'android:exported'属性为'false'；
-    - 如果组件必须要提供给外部应用使用，建议对组件进行权限控制。
-    - android:exported 是Android中的四大组件 Activity，Service，Provider，Receiver 四大组件中都会有的一个属性。总体来说它的主要作用是：是否支持其它应用调用当前组件。
-- 如果 android:exported="true" 无法修改，那么可以增加权限处理
-    ``` xml
-    <uses-permission android:name="${applicationId}.permission.WEB_ACTIVITY" />
-    
-    <activity android:name="com.yc.library.web.WebViewActivity"
-        android:permission="${applicationId}.permission.WEB_ACTIVITY"
-        android:exported="true"/>
-    ```
 
 
-#### 2.9 作弊器攻击问题
+#### 2.5 代码安全风险
 
 
 
 ### 03.一些安全防御实践
 #### 3.1 本地加密
+- 密钥的安全问题
+    - 第一种：最低级的，密钥被直接放在Java代码中。
+    - 第二种：放在Java代码中，会把密钥拆成几个部分，然后通过一定算法计算合成完整的密钥。
+    - 第三种：把密钥和加解密放so中
+    - 第四种：so再做下签名校验
+
+
+
+
+#### 3.2 proguard混淆
+- proguard混淆让代码增加阅读难度
+    - 最简单的加密，成本最低，令 APK 难以被逆向工程，增加反编译的成本。而且可以比较有效的扼杀一些在破解边缘徘徊的初级破解者。
+
 
 
 
 #### 3.3 接口签名
 - 接口上的安全，最基本的保证就是Https，同时对SSL协议的域名进行校验（关键词：X509TrustManager、hostnameVerifier）
-    - 在此之上，请求的接口上，我们一般会带上一个签名，或者叫token，这个加密的密钥串，就是我们身份的象征，一般来说，这个签名也就是通过前面我们千辛万苦要藏好的本地密钥来进行生成的，通常也就是那几个参数，例如时间戳、UserID、IMEI、Mac地址等等进行拼装，然后通过DES、3DES、AES、hmacSHA1等方式进行加密后，再经过Base64进行编码生成的，这些加密过程就不赘述了。
+    - 在此之上，请求的接口上，我们一般会带上一个签名，或者叫token，这个加密的密钥串，就是我们身份的象征。
+    - 一般来说，这个签名也就是通过前面我们千辛万苦要藏好的本地密钥来进行生成的，通常也就是那几个参数，例如时间戳、UserID、IMEI、Mac地址等等进行拼装，然后通过DES、3DES、AES、hmacSHA1等方式进行加密后，再经过Base64进行编码生成的，这些加密过程就不赘述了。
 
 
 
@@ -180,13 +161,102 @@
 
 
 
+#### 3.6 so库加固检测
+- 先说一下so库的风险点
+    - So文件为APK中包含的动态链接库文件，Android利用NDK技术将C/C++语言实现的核心代码编译为So库文件供Java层调用。
+    - So文件被破解可能导致应用的核心功能代码和算法泄露。攻击者利用核心功能与算法可轻易抓取到客户端的敏感数据，并对其解密，导致用户的隐私泄露或直接财产损失。
+- 解决方案
+    - 对so文件进行安全加固、可以使用第三方的安全平台so加固方案。
+
+
+
+
+
+
+### 04.代码安全例子
+#### 4.1 条件判断代码
+- 首先，我们一起来看一段不起眼的条件判断代码，这里可能有什么问题吗？你可能会纳闷，这是再常见不过的一个条件判断了，能有什么安全隐患？
+    ```
+    // a, b, c 都是 int 类型的数值
+    if (a + b < c) {
+        // …
+    }
+    ```
+    - 这里的隐患是数值类型需要防范溢出，否则这不仅仅可能会带来逻辑错误，在特定情况下可能导致严重的安全漏洞。
+    - 从语言特性来说，Java 和 JVM 提供了很多基础性的改进，相比于传统的 C、C++等语言，对于数组越界等处理要完善的多，原生的避免了缓冲区溢出等攻击方式，提高了软件的安全性。但这并不代表完全杜绝了问题，Java 程序可能调用本地代码，也就是 JNI 技术，错误的数值可能导致 C/C++ 层面的数据越界等问题，这是很危险的。
+- 所以，上面的条件判断，需要判断其数值范围，例如，写成类似下面结构。
+    ```
+    if (a < c – b)
+    ```
+
+
+#### 4.2 异常不要携带重要信息
+- 再来看一个例子，请看下面的一段异常处理代码：
+    ```
+    try {
+        // 业务代码
+    } catch (Exception e) {
+        throw new RuntimeException(hostname + port + “ doesn’t response”);
+    }
+    ```
+    - 这段代码将敏感信息包含在异常消息中，试想，如果是一个应用，异常也没有良好的包装起来，很有可能就把内部信息暴露给终端客户。
+    - 对于安全标准特别高的系统，甚至可能要求敏感信息被使用后，要立即明确在内存中销毁，以免被探测；或者避免在发生 core dump 时，意外暴露。
+
+
+
+#### 4.3 序列化安全问题
+- Java 提供了序列化等创新的特性，广泛使用在远程调用等方面，但也带来了复杂的安全问题。直到今天，序列化仍然是个安全问题频发的场景，通常建议：
+    - 敏感信息不要被序列化！在编码中，建议使用 transient 关键字将其保护起来。
+    - 反序列化中，建议在 readObject 中实现与对象构件过程相同的安全检查和数据检查。
+- 另外，在 JDK 9 中，Java引入了过滤器机制，以保证反序列化过程中数据都要经过基本验证才可以使用。
+    - 其原理是通过黑名单和白名单，限定安全或者不安全的类型，并且你可以进行定制，然后通过环境变量灵活进行配置，会更加具体的使用你可以参考 ObjectInputFilter。
+
+
+
+#### 4.4 三方库lib中类安全
+- 看到很多第三方库，比如gson，rxJava等库，几乎大多数类都是用finial修饰的。这个是为什么呢？
+- 当用final修饰一个类时，表明这个类不能被继承。也就是说，如果一个类你永远不会让他被继承，就可以用final进行修饰。final类中的成员变量可以根据需要设为final，但是要注意final类中的所有成员方法都会被隐式地指定为final方法。
+- 很多类，不想被开发者继承，为了内部安全。同时也避免反射攻击，所以就用finial修饰。这也是一种保证类安全的有效做法。
+
+
+#### 4.6 扫描漏洞安全
+- Activity 组件对外暴露风险
+    - Activity 组件对外暴露，且未做权限控制，可能会造成信息泄露、劫持利用、拒绝服务等风险。
+- 漏洞位置
+    ```
+    <activity android:name="com.yc.library.web.WebViewActivity"
+        android:exported="true"/>
+    ```
+- 修复建议
+    - 如果应用的 Activity 组件不必要对外，或者组件配置了intent filter标签，建议显示设置组件的'android:exported'属性为'false'；
+    - 如果组件必须要提供给外部应用使用，建议对组件进行权限控制。
+    - android:exported 是Android中的四大组件 Activity，Service，Provider，Receiver 四大组件中都会有的一个属性。总体来说它的主要作用是：是否支持其它应用调用当前组件。
+- 如果 android:exported="true" 无法修改，那么可以增加权限处理
+    ```
+    <uses-permission android:name="${applicationId}.permission.WEB_ACTIVITY" />
+    
+    <activity android:name="com.yc.library.web.WebViewActivity"
+        android:permission="${applicationId}.permission.WEB_ACTIVITY"
+        android:exported="true"/>
+    ```
+
+
+#### 4.7 公共组件安全
+- 风险提示说明
+    - Activity、Service、Provider、Receiver四大组件若配置为android:exported =”true”，将可以被外部应用调用，这样存在安全隐患的风险。
+- 解决方案
+    - 在应用的AndroidManifest.xml文件中，设置组件的android:exported 属性为false或者通过设置自定义权限来限制对这些组件的访问。
+    - 值得一提的是，若部分功能使用前提是配置必须使用exported为true，这种情况开发者应该根据实际情况来进行集成。
+
+
+
+
+#### 4.9 作弊器攻击问题
+
+
+
+
 #### 参考
-- App安全二三事
-    - https://mp.weixin.qq.com/s?__biz=MzAxNzMxNzk5OQ==&mid=2649485760&idx=1&sn=43195ad6e5422d14642227b6bfe17914&chksm=83f838c0b48fb1d68689d33de18f5565a279c5deb5d83f36cea0fbcd3e938124632b71ab760f&scene=38#wechat_redirect
-- Android安全防护篇
-    - https://www.jianshu.com/p/3aef7fa5b8c7
-- 我的 Android 应用安全方案梳理
-    - https://juejin.cn/post/7079794266045677575#heading-14
 - APP端上通用安全体系建设
     - https://www.jianshu.com/p/cd63552eea05
 
