--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -461,32 +461,13 @@
 
 
 
-### 案例
-- Android使用GRPC进行通信过程解析
-  - https://www.jb51.net/article/276659.htm
-- GRPC 性能最佳做法
-  - https://learn.microsoft.com/zh-cn/aspnet/core/grpc/performance?view=aspnetcore-7.0
-
-
 
 #### 参考博客
-- Android protoBuf 原理
-    - https://blog.csdn.net/shift_wwx/article/details/120532407
 - Protobuf编码原理和核心API
     - https://zhuanlan.zhihu.com/p/542208233
-- 快速理解Protobuf的背景、原理、使用、优缺点
-    - https://developer.aliyun.com/article/1081532
-- 原生protobuf的缺陷，以及类库优化思路
-    - https://www.jianshu.com/p/60d8480083f0
-- grpc原理及四种实现方式
-    - https://zhuanlan.zhihu.com/p/576031935
 - Protobuf 使用介绍及原理
     - https://gitee.com/chenjim/ProtoBuf
-
-
-
-
-- 参考
-  - https://km.woa.com/articles/show/568259?kmref=search&from_page=1&no=1
-
-
+- Android使用GRPC进行通信过程解析
+  - https://www.jb51.net/article/276659.htm
+- GRPC Java源码解析
+  - https://blog.csdn.net/fs3296/article/details/103608383/
