--- a/Read/ReadBlogWiki/10.生活博客/09.人脉的思考意义.md
+++ b/Read/ReadBlogWiki/10.生活博客/09.人脉的思考意义.md
@@ -79,7 +79,8 @@
     - 人脉也是等级森严的，所谓有效的社交一定是资源对称，能等价交换，彼此能愉快交流，看到利益前景，有来有往，否则等待你的只是冷漠翻白眼的无效社交。
     - 参加再多的无效社交还不如先打磨自己，把时间浪费在让自己变好上才是最高性价比的事，否则再有人脉的社交圈也是走马观花。
     - 社交是必须的，跟同行或知识对等的人交流也很有快感和受用，但是不能没有任何甄选就稀里糊涂地积极响应。适合自己的有效社交才能让人心情愉悦，才能结交到志同道合的人脉。
-    - 所以，与其忙着参加各种饭局，交流会，赶着结交各路人，不如把时间和精力沉下来，放在提升自己，让自己变得更优秀上。到那个时候，都不需要参加聚会，想联系上你的人会很多，想结交的人也更容易搭上话，该来的人脉自然会来。
+    - 所以，与其忙着参加各种饭局，交流会，赶着结交各路人，不如把时间和精力沉下来，放在提升自己，让自己变得更优秀上。
+    - 到那个时候，都不需要参加聚会，想联系上你的人会很多，想结交的人也更容易搭上话，该来的人脉自然会来。
 
 
 
