--- a/Read/ReadBlogWiki/11.搞钱搞钱/01.去注册营业执照.md
+++ b/Read/ReadBlogWiki/11.搞钱搞钱/01.去注册营业执照.md
@@ -1,6 +1,46 @@
 # 01.去注册营业执照
 #### 目录介绍
-- 01.
+- 01.注册材料
+- 02.注册公司费用
+- 03.空壳公司记账报税
+- 04.空壳公司作用
+
+
+
+### 01.注册材料
+- 准备5项资料：公司名称、股东信息、经营范围、注册资金和注册地址。
+    - 其中注册地址尤为关键，需要使用商用性质的地址，除了深圳、西安、郑州、东莞可以使用住宅地址外，其他城市不能使用住宅地址注册。
+    - 如果没有的话建议使用挂靠商务地址，性价比很高，而且可以节省您的注册公司成本！
+
+
+### 02.注册公司费用
+- 注册公司费用
+    - 1、注册营业执照：自己去办理不用钱，代办需600-1000，1-3个工作日。
+    - 2、注册地址：空壳公司可以使用挂靠地址注册，找代办公司提供，这样可以节省费用，每年大概2000-4000/年，有一年一交费、三年一交费或者交一次钱就可以长期使用的地址。1-2个工作日，每个区价格不一样，需要根据实际情况来看！
+    - 3、代理刻章：免费办理，2个工作日，公章+财务章+法人私章+发票章+公安系统备案。
+    - 4、银行开户：免费办理，1个工作日。可以在自己家附近随便选择一家银行办理。
+    - 5、记账报税：自己会做账的话可以自己做，不会做就交给代理记账公司，前期可以零申报6个月，小规模1800-3600/年，一般纳税人4000-6000/年，价格居间调整会有变化，主要还是要看开票量，一般纳税人价格会贵一点，服务内容涉及每个月纸质档账册+电子档账套+每个月报+季度报+年报+平衡开支+合理规划税务+税务咨询+年底汇算清缴！
+
+
+### 03.空壳公司记账报税
+- 只要注册下来就要进行记账报税
+    - 公司没有业务以及不经营的情况下，也要进行记账报税！
+- 企业经营没有收入也要进行零申报
+    - 企业没有产生收入或者没有经营也要记账报税，但没有收入≠不用申报≠不用办理涉税业务。
+    - 所以，必须明确企业这个阶段虽然可能不涉及税款的缴纳，但是申报是必须按期完成的。
+- 要定期完成申报事项
+    - 在营业初期，企业主要是要定期完成申报事项，包括：增值税及附加税费、企业所得税或个人所得税（经营所得）、代扣代缴个人所得税（综合所得），并按期申报财务报表。
+- 进行纳税申报
+    - 目前企业有两种申报方式可以选择：网上申报和上门申报。
+    - 网上申报需申请网上申报资格。通过网上电子申报软件或电子税务局填写报表申报。申报完成后，如已签订三方协议可直接网上扣款。
+    - 上门申报需携带申报表和公章前往办税服务大厅进行办理。
+- 注意申报纳税期限的规定
+    - 增值税、消费税一个月为一期纳税的，纳税人应自期满后十五日内缴纳税款；以一日、三日、五日、十日、十五日为一期纳税的。
+    - 纳税人应自期满后五日内预缴税款，于次月一日起十五日内申报纳税并结清上月应纳税款。
+
+
+
+
 
 
 
