--- a/Read/ReadBlogWiki/11.搞钱搞钱/02.一件代发注意项.md
+++ b/Read/ReadBlogWiki/11.搞钱搞钱/02.一件代发注意项.md
@@ -5,6 +5,7 @@
 - 03.注意事项的说明
 - 04.参考因素有哪些
 - 05.一件代发的平台
+- 06.一件代发的风险
 - 07.智慧云仓如何搞
 
 
@@ -46,6 +47,19 @@
 
 
 ### 05.一件代发的平台
+- 1688平台
+
+
+### 06.一件代发的风险
+- 抖店、拼多多、淘宝、小红书，一件代发模式都能做，但是现在都不好做。
+    - 任何一个平台都不可能没有无货模式的商家，如果抱着试一试态度，那不管你做哪一个平台，都是不可能做的长久的。
+    - 在我们店铺前期没有单量，没有流量的时候，用来过渡的散单，你才需要去第三方平台拍单。
+    - 不管你做哪一个平台，当你的产品能起量以后，你肯定是要对接稳定的厂家打单发货的，这样你才能做的长久。
+    - 如果有稳定的货源，对接厂家打单发货，那就不存在无货模式的问题了，那就是有货源的玩法。
+- 一件代发的三个阶段
+    - 初级水平，直接平台上架拍单发货；
+    - 中级水平，直接联系厂家线下打单发货；
+    - 高级水平，不仅线下打单发货，还冒充厂家做起了批发单。
 
 
 
