--- a/Read/ReadBlogWiki/11.搞钱搞钱/03.选品定位的说明.md
+++ b/Read/ReadBlogWiki/11.搞钱搞钱/03.选品定位的说明.md
@@ -1,6 +1,7 @@
 # 03.选品定位的说明
 #### 目录介绍
 - 01.如何选合适品种
+    - 1.0 选品种类
     - 1.1 抖音选品
     - 1.2 快手选品
     - 1.3 拼多多选品
@@ -32,8 +33,17 @@
     - 每个平台都有自己的数据网站，可以查看到热卖的商品排行榜，可以选择类目、销量、价格、佣金、转化率等等因素，来选品。
 - 举一个例子
     - 三方平台-蝉妈妈，在这个平台上可以查找热销榜单，热销文案，热销商品
-    - 购物平台-拼多多，
-    - 购物平台-淘宝，
+    - 购物平台-拼多多
+    - 购物平台-淘宝
+
+
+
+#### 1.0 选品种类
+- 一件 代发百货
+  - 具体可以看1688，日用百货分类
+  - 杯子（玻璃杯，刻字杯，保温杯，儿童水杯，定制杯子，创意杯子等等）
+  - 牙刷（电动牙刷，牙刷等）
+  - 小夜灯（小台灯，床头灯，硅胶灯）
 
 
 
