--- a/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
+++ b/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
@@ -1,15 +1,17 @@
 #### 目录介绍
 - 01.整体概述介绍
-    - 1.1 项目背景
+    - 1.1 项目背景介绍
     - 1.2 遇到问题
-    - 1.3 基础概念
-    - 1.4 设计目标
+    - 1.3 网络优化概念
+    - 1.4 网络优化维度
+    - 1.5 监控网络思路
 - 02.网络分析流程
     - 2.1 curl分析网络
     - 2.2 弱网模拟思路
     - 2.3 抓包拦截思路
     - 2.4 流量统计分析
     - 2.5 耗时统计思路
+    - 2.6 Glide耗时思路
 - 03.网络优化策略
     - 3.1 HTTPDNS优化
     - 3.2 连接复用
@@ -17,6 +19,7 @@
     - 3.4 IP之恋
     - 3.5 CDN
     - 3.6 Http2
+    - 3.7 数据缓存
 - 04.一些常见优化
     - 4.1 网络数据加密
     - 4.2 防止域名劫持
@@ -33,21 +36,41 @@
 
 
 
+
 ### 01.整体概述介绍
-#### 1.1 项目背景
+#### 1.1 项目背景介绍
 - 
 
 
 #### 1.2 遇到问题
-- OkHttp如何进行各个请求环节的耗时统计呢？
-    - OkHttp 版本提供了EventListener接口，可以让调用者接收一系列网络请求过程中的事件，例如DNS解析、TSL/SSL连接、Response接收等。
-    - 通过继承此接口，调用者可以监视整个应用中网络请求次数、流量大小、耗时(比如dns解析时间，请求时间，响应时间等等)情况。
 
 
-#### 1.3 基础概念
+#### 1.3 网络优化概念
+- Android 网络优化方法
+    - 主要讲的就是线下网络测试工具、线上网络监控方案、流量优化方案和质量优化方案。
+- 网络测试工具
+    - Network Profiler、Charles和Stetho。
+- 线上网络监控方案
+    - 有OkHttp 的 EventListener、NetworkStatsManager 和 TrafficStats。
+- 流量优化方案
+    - 数据缓存、数据压缩和图片压缩。
+- 质量优化方案
+    - HttpDns 优化、协议版本优化以及资本优化。
 
 
-#### 1.4 设计目标
+#### 1.4 网络优化维度
+- 网络优化时要考虑的维度
+    - 流量维度和质量维度，然后根据这两个维度的数据减少流量消耗以及提升请求速度。
+- 流量维度
+    - App 在一段时间内流量消耗的精准度量，流量消耗可以区分为网络类型、前后台以及请求和响应等维度。
+- 质量维度
+    - 可以从请求时长、请求成功率和Top失败接口等数据上进行区分，以便后续能快速定位和解决问题。
+
+
+
+#### 1.5 监控网络思路
+- 建立完善的监控体系
+    - 指的是做网络优化要监控网络请求成功率和网络请求异常，比如流量消耗过多、请求次数过多以及下载文件过大等异常。
 
 
 
@@ -58,7 +81,7 @@
     - curl（全称Client URL）是一个在命令行下运行的网络工具，用于与服务器进行通信。
     - 它支持多种协议，包括HTTP、HTTPS、FTP、SMTP、TELNET等，并提供了丰富的选项和功能，使其成为一个强大的网络调试和测试工具。
 - curl命令的基本语法
-    - 基本语法如下：curl [选项] [URL] 比如，我要调试某个接口查看请求详细信息：curl -v https://www.wanandroid.com/article/list/0/json
+    - 基本语法如下：curl 【选项】 【URL】 比如，我要调试某个接口查看请求详细信息：curl -v https://www.wanandroid.com/article/list/0/json
 - curl测试接口案例分析
     ```
     yangchongdeMacBook-Pro:~ yangchong$ curl -v https://www.wanandroid.com/article/list/0/json
@@ -118,6 +141,7 @@
     - 详细讲解一下每个步骤，这里主要是TLS协议中握手协议流程。更多可以看：[TLS协议中的握手协议](https://blog.csdn.net/zhbgreat/article/details/87867380)
 
 
+
 #### 2.2 弱网模拟思路
 - 如何开发模拟网络异常工具
     - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
@@ -159,12 +183,18 @@
 
 
 #### 2.4 流量统计分析
-- 流量监测的实现相对简单，利用系统提供的TrafficStats.getUidRxBytes方法，配合Actvity生命周期，即可获取每个Activity的流量消耗。
-- 具体做法：在Activity start的时候记录起点，在pause的时候累加，最后在Destroyed的时候统计整个Activity的流量消耗，如果想要做到Fragment维度，就要具体业务具体分析了
+- 流量监测的实现相对简单
+    - 利用系统提供的 TrafficStats.getUidRxBytes方法，配合Activity生命周期，即可获取每个Activity的流量消耗。
+    - 具体做法：在Activity start的时候记录起点，在pause的时候累加，最后在Destroyed的时候统计整个Activity的流量消耗，如果想要做到Fragment维度，就要具体业务具体分析了
+- TrafficStats 缺点
+    - 只能统计到手机上次重启后到现在的流量消耗。
 
 
 
 #### 2.5 耗时统计思路
+- OkHttp如何进行各个请求环节的耗时统计呢？
+    - OkHttp 版本提供了EventListener接口，可以让调用者接收一系列网络请求过程中的事件，例如DNS解析、TSL/SSL连接、Response接收等。
+    - 通过继承此接口，调用者可以监视整个应用中网络请求次数、流量大小、耗时(比如dns解析时间，请求时间，响应时间等等)情况。
 - 如何消耗记录时间
     - 在OkHttp库中有一个EventListener类。该类是网络事件的侦听器。扩展这个类以监视应用程序的HTTP调用的数量、大小和持续时间。
     - 所有启动/连接/获取事件最终将接收到匹配的结束/释放事件，要么成功(非空参数)，要么失败(非空可抛出)。
@@ -180,6 +210,9 @@
     - 针对网络请求每个阶段统计了消耗时间，[网络请求耗时统计库](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorNetLib)；
     - 关于EventListener的原理解读可以看我另一篇博客：[OkHttp请求耗时统计和实践](https://juejin.cn/post/6875626117265358855)
 
+
+#### 2.6 Glide耗时思路
+- EventListener 还能和 Glide 搭配使用，以获取图片请求的各个步骤的数据。
 
 
 
@@ -205,14 +238,26 @@
 
 
 #### 3.3 传输数据压缩
+- 传输数据压缩
+    - 具体有 开启 Gzip 压缩、压缩请求头以及合并请求三个方案。
+    - 开启 Gzip 压缩就是把内容编码 Content-Encoding 首部设为 gzip，网络框架用的是 OkHttp ，那么在没有设置 Content-Encoding 请求头的情况下，OkHttp 默认会设置为 gzip。
+    - 压缩请求头指的是在请求头不变的情况下，让服务端缓存请求头，在需要请求头的某些信息时，根据之前的请求头的 MD5 从之前的缓存中取。
+    - 合并请求指的是把可以合并的请求合并起来，因为每一个网络请求头会有冗余信息。
 - 第一时间想到的还是减少传输的数据量，也就是我们常说的数据压缩。首先对于 HTTP 请求来说，数据主要包括三个部分：
     - 请求 URL
     - 请求 header
     - 请求 body
-- 对于 header 来说，如果使用 HTTP/2.0 连接本身的头部压缩技术，因此需要压缩的主要是请求 URL 和请求 body。
-- 对于请求 URL 来说，一般会带很多的公共参数，这些参数大部分都是不变的。这样不变的参数客户端只需要上传一次即可，其他请求我们可以在接入层中进行参数扩展。
-- 对于请求 body 来说，一方面是数据通信协议的选择，在网络传输中目前最流行的两种数据序列化方式是 JSON 和 Protocol Buffers。正如我之前所说的一样，Protocol Buffers 使用起来更加复杂一些，但在数据压缩率、序列化与反序列化速度上面都有很大的优势。
+- 具体对数据量压缩如何理解
+    - 对于 header 来说，如果使用 HTTP/2.0 连接本身的头部压缩技术，因此需要压缩的主要是请求 URL 和请求 body。
+    - 对于请求 URL 来说，一般会带很多的公共参数，这些参数大部分都是不变的。这样不变的参数客户端只需要上传一次即可，其他请求我们可以在接入层中进行参数扩展。
+    - 对于请求 body 来说，一方面是数据通信协议的选择，在网络传输中目前最流行的两种数据序列化方式是 JSON 和 Protocol Buffers。正如我之前所说的一样，Protocol Buffers 使用起来更加复杂一些，但在数据压缩率、序列化与反序列化速度上面都有很大的优势。
 
+
+
+#### 3.7 数据缓存
+- 客户端数据缓存
+    - 可以分为 OkHttp 的 Cache 和 无网拦截器两种方案，我们项目中一般会有一些对实时性要求不高的接口，比如省市区列表，这时就可以考虑缓存这些接口的数据。
+    - OkHttp 默认是不会缓存响应数据的。Cache 内部使用了 DiskLruCache ，创建 Cache 只需要指定缓存目录和缓存大小，然后设置给 OkHttpClient 就可以了。使用 Cache 要注意的是，默认缓存拦截器只会缓存 GET 和 HEAD 等获取资源的请求方法的响应。
 
 
 
@@ -246,8 +291,12 @@
 
 
 #### 4.6 图片网络优化
-- 比如我之前看到豆瓣接口，提供一种加载图片方式特别好。接口返回图片的数据有三种，一种是高清大图，一种是正常图片，一种是缩略小图。当用户处于wifi下给控件设置高清大图，当4g或者3g模式下加载正常图片，当弱网条件下加载缩略图【也称与加载图】。
-- 简单来说根据用户的当前的网络质量来判断下载什么质量的图片（电商用的比较多）。豆瓣开源接口可以参考一下！
+- 比如我之前看到豆瓣接口，提供一种加载图片方式特别好。
+    - 接口返回图片的数据有三种，一种是高清大图，一种是正常图片，一种是缩略小图。
+    - 当用户处于wifi下给控件设置高清大图，当4g或者3g模式下加载正常图片，当弱网条件下加载缩略图【也称与加载图】。
+    - 简单来说根据用户的当前的网络质量来判断下载什么质量的图片（电商用的比较多）。豆瓣开源接口可以参考一下！
+
+
 
 
 #### 4.7 弱网模拟优化
