--- a/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
+++ b/Read/ReadAndroid/00.方案实践/08.网络分析&优化实践.md
@@ -12,6 +12,7 @@
     - 2.4 流量统计分析
     - 2.5 耗时统计思路
     - 2.6 Glide耗时思路
+    - 2.7 网络速度测试
 - 03.网络优化策略
     - 3.1 HTTPDNS优化
     - 3.2 连接复用
@@ -154,6 +155,9 @@
     - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
     - 如何对RequestBody数据限制？请求数据write的时候，第一限制字节流传输(每次写设置byteCount字节长度)，第二在一秒内如果超出限制就sleep一下
     - 如何对ResponseBody数据限制？
+- 弱网络模拟工具可以看
+    - MonitorInterceptor
+
 
 
 #### 2.3 抓包拦截思路
@@ -180,6 +184,9 @@
     - 第二步，在最开始调用方法中，获取eventID（请求和回包网络事件id），然后通过这个id拿到之前创建的bean(存在Map中，key就是构建的id)。
     - 第三步，在各个方法中打上时间戳，举个例子，在dnsStart记录时间戳，在dnsEnd记录时间戳，时间差就是两个的差值。
     - 第四步，在执行监听最后的方法callEnd中，做出最后的计算，主要是记录每个阶段的差值，存到对应的bean中(注意一个完整的请求和回包流程id是唯一的)。
+- 抓包拦截工具可以看
+    - MonitorNetLib
+
 
 
 #### 2.4 流量统计分析
@@ -188,6 +195,9 @@
     - 具体做法：在Activity start的时候记录起点，在pause的时候累加，最后在Destroyed的时候统计整个Activity的流量消耗，如果想要做到Fragment维度，就要具体业务具体分析了
 - TrafficStats 缺点
     - 只能统计到手机上次重启后到现在的流量消耗。
+- 流量统计工具可以看
+    - MonitorFlow
+
 
 
 
@@ -213,6 +223,10 @@
 
 #### 2.6 Glide耗时思路
 - EventListener 还能和 Glide 搭配使用，以获取图片请求的各个步骤的数据。
+
+
+
+#### 2.7 网络速度测试
 
 
 
@@ -310,6 +324,16 @@
     - 返回数据的body也可以做gzip压缩，body数据体积可以缩小到原来的30%左右。（也可以考虑压缩返回的json数据的key数据的体积，尤其是针对返回数据格式变化不大的情况，支付宝聊天返回的数据用到了）
 
 
+### 相关demo
+- 弱网络模拟工具可以看
+    - MonitorInterceptor
+- 抓包拦截工具可以看
+    - MonitorNetLib
+- 流量统计工具可以看
+    - MonitorFlow
+- 网络测速工具可以看
+    - MonitorSpeed
+
 
 
 ### 参考文章
@@ -319,7 +343,6 @@
     - https://juejin.cn/post/7018212919439523847
 - Android网络性能监控方案
     - https://zhuanlan.zhihu.com/p/285191490
-- https://blog.nowcoder.net/n/6411b209a40f40a6a4c423b9eb062911
 - 货拉拉移动端网络优化——协议升级篇
   - https://juejin.cn/post/7194627379656917047#heading-11
 
