--- a/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
+++ b/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
@@ -11,8 +11,10 @@
 
 
 ### 01.有过自己的梦想
-- 你肯定有过梦想，做过梦，我也不例外。小时候梦想着做老师，做飞行员，做工程师，当老板……后来不管是否有实现，一定有过这样或者那样的梦想。但更重要的是反问为什么有这样的梦想，因为梦想是抵达彼岸的源动力。
-- 如果不能清晰地看见梦想之路前方的愿景，计划半途而废的概率就很大了。古希腊哲学家苏格拉底有一句名言：“未经检视的人生不值得活。”那么我们为什么要检视自己的人生呢？正是因为我们有成长的梦想，那么梦想的根源又到底是什么呢？
+- 你肯定有过梦想，做过梦，我也不例外。小时候梦想着做老师，做飞行员，做工程师，当老板……后来不管是否有实现，一定有过这样或者那样的梦想。
+- 但更重要的是反问为什么有这样的梦想，因为梦想是抵达彼岸的源动力。
+- 如果不能清晰地看见梦想之路前方的愿景，计划半途而废的概率就很大了。古希腊哲学家苏格拉底有一句名言：“未经检视的人生不值得活。”
+- 那么我们为什么要检视自己的人生呢？正是因为我们有成长的梦想，那么梦想的根源又到底是什么呢？
 
 
 
