--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -47,7 +47,8 @@
 
 
 #### 2.2 对罗列目标分类
-- 回答完这些问题后，把你所列出的所有目标分成六个类，对学习知识分成四个类。**目标分类的作用，主要是为了让自己平衡生活和工作，均衡发展。知识分类的作用，主要是为了自己，学习有个优先级**。
+- 回答完这些问题后，把你所列出的所有目标分成六个类，对学习知识分成四个类。
+- **目标分类的作用，主要是为了让自己平衡生活和工作，均衡发展。知识分类的作用，主要是为了自己，学习有个优先级**。
 - 对目标分类：1、健康；2、修养/知识；3、爱情/家庭；4、事业/财富；5、朋友；6、社会。
 - 对知识分类：1、了解；2、理解；3、熟悉；4、掌握。在传智培训IT时老师反复强调，如今工作多年慢慢有了点感悟。
 
@@ -73,7 +74,8 @@
 
 ### 03.事中详细去规划
 #### 3.1 校核设定目标
-- 想通过技术开发一年赚100万，这是欲望不是目标。虽然说设置目标要远大，但是一定要具体，不要吹牛逼。因为你我大都是普通人……核对你所列的三个目标，是否与形成结果的五大规则相符。
+- 想通过技术开发一年赚100万，这是欲望不是目标。虽然说设置目标要远大，但是一定要具体，不要吹牛逼。
+- 因为你我大都是普通人……核对你所列的三个目标，是否与形成结果的五大规则相符。
 - 1）用肯定的语气来预期你的结果，说出你希望的而非不希望的；
 - 2）结果要尽可能具体，还要明确订出完成的期限与项目；
 - 3）事情完成时你要能知道完成了，可以用todo标注事项掌握进度；
@@ -89,7 +91,8 @@
 
 
 #### 3.3 使用PDCA制定计划
-- 毕竟一开始目标或者远景规划得再好，如果没有落地执行，那么也产出不了任何价值。所谓 PDCA 执行法，就是把事情的执行过程分成四个环节：计划（Plan）、执行（Do）、检查（Check）和行动（Act），从而把控执行过程，保证具体事项高效高质地落地。
+- 毕竟一开始目标或者远景规划得再好，如果没有落地执行，那么也产出不了任何价值。
+- 所谓 PDCA 执行法，就是把事情的执行过程分成四个环节：计划（Plan）、执行（Do）、检查（Check）和行动（Act），从而把控执行过程，保证具体事项高效高质地落地。
 - ![image](https://img-blog.csdnimg.cn/75d2c8335e4240388b4e8666b83fcbc6.png)
 
 
@@ -113,7 +116,8 @@
 
 #### 4.2 找效仿的模范
 - 有时候，总有些烦心的事情，或者遇到了某坎，不想坚持想躺平了。怎么办？那就找到几个好朋友，相互激烈地讨论，有几个就好。
-- 为自己找一些值得效法的模范。从你周围或从名人当中找出三位在你目标领域中有杰出成就的人。在你做完这件事，请你阖上眼睛想一想，仿佛他们每一个人都会提供你一些能达成目标的建议，记下他们每一位建议的方法，如同他们与你私谈一样。
+- 为自己找一些值得效法的模范。从你周围或从名人当中找出三位在你目标领域中有杰出成就的人。
+- 在你做完这件事，请你阖上眼睛想一想，仿佛他们每一个人都会提供你一些能达成目标的建议，记下他们每一位建议的方法，如同他们与你私谈一样。
 
 
 
@@ -135,7 +139,8 @@
 
 
 #### 5.2 用表格总结
-- 列一张表，写下过去曾是你目标而目前已实现的一些事。你要从其中看看自己学到了些什么，这期间有哪些值得感谢的人，你有哪些特别的成就。有许多人常常只看到未来，却不知珍惜和善用已经拥用的。
+- 列一张表，写下过去曾是你目标而目前已实现的一些事。你要从其中看看自己学到了些什么，这期间有哪些值得感谢的人，你有哪些特别的成就。
+- 有许多人常常只看到未来，却不知珍惜和善用已经拥用的。
 
 
 #### 5.3 懂得一点复盘
