--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -4,28 +4,24 @@
 - 03.能力地图的划分
 - 04.技能地图的落地
 - 05.构建地图技能树
-- 06.思考需要流程化
-
 
 
 
 ### 01.为何要技能地图
 #### 1.1 你晋升资本是什么
-- 有的人经常会说一定要找到一份月薪多少多少的工作，争取做到什么什么职位，未来要赚多少的钱。耐心听完“远大蓝图”，然后想一想：“凭什么达到自己的目标？你的资本是什么？”
-- 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？**对于很多已经身在职场的朋友而言，你晋升的资本又是什么**？　
+- 有的人经常会说一定要找到一份月薪多少多少的工作，争取做到什么什么职位，未来要赚多少的钱。
+- 耐心听完“远大蓝图”，然后想一想：“凭什么达到自己的目标？你的资本是什么？”
+- 如果是你，你该怎么回答这个问题？有着自己的伟大抱负，你有没有想到，要实现这些目标，你的资本是什么？
+- **对于很多已经身在职场的朋友而言，你晋升的资本又是什么？**　因此，自己需要清楚自己的优势，技能，资源，也就是能力地图！
+
 
 
 #### 1.2 工作日常的烦恼
 - 不管所处什么行业做什么工作，在日常的工作中，你是否有这样的烦恼：
-- ❶对自己的工作缺乏系统的认识，遇到实际问题时，没有有效的流程或模型，为自己的行动提供方向。
-- ❷想要做有针对性的学习、查缺补漏，但又不知道自己缺什么，应该从哪里补起。
-- ❸就算学了一堆干货、课程，但对自己的工作还是没有一点帮助，很难应用到实践中。
-
-
-#### 1.3 技能是亮剑资本
-- 人生在发展过程中，很多时候都需要毫不犹豫地向别人展示自己的实力，要敢于展示，善于展示，拥有自己的技能地图，这就是“亮剑”。
-- 既然具备了“亮剑”的意识，那么，下一步你就要考虑到亮什么剑：我到底拿什么资本给人家看？“亮剑”的资本又在哪里？
-- 因此，我们需要绘制自己的技能地图，不断地完善地图上的点……
+- 1.对自己的工作缺乏系统的认识，遇到实际问题时，没有有效的流程或模型，为自己的行动提供方向。
+- 2.想要做有针对性的学习、查缺补漏，但又不知道自己缺什么，应该从哪里补起。
+- 3.就算学了一堆干货、课程，但对自己的工作还是没有一点帮助，很难应用到实践中。
+- 4.学习的过程中，会遇到各种各样的问题。比如，不懂得如何进行知识归类、很难明确自己的学习目标等等。
 
 
 
@@ -42,7 +38,8 @@
 
 ### 03.能力地图的划分
 #### 3.1 基础能力
-- 基础能力：具备大型规模项目的把控和设计能力，技术上具备完全把握一个技术方向的能力，并擅长将大规模项目拆解成多向中型规模的项目，并保证产品业务能达成预期的目标。具备跨团队资源协调，具备计划制定与风险控制能力。
+- 基础能力：具备大型规模项目的把控和设计能力，技术上具备完全把握一个技术方向的能力，并擅长将大规模项目拆解成多向中型规模的项目，并保证产品业务能达成预期的目标。
+- 沟通能力：有将事情沟通好的能力，比如跨团队资源协调，具备小组内部沟通计划制定与风险控制能力。
 
 
 #### 3.2 通用能力
@@ -58,7 +55,7 @@
 - 专业技能：具备全面的技术规划能力，了解项目和产品自己领域绝大大多的技术原理和实现，深度的了解业务。
 - 创新能力：有模块级的关键的技术决策或者创新点，对业务发展有较大促进作用。善于发现和总结系统问题，并给出解决方案，带来产品功能的创新。
 - 产品思维：能够深入了解产品需求，并能综合权衡产品需求、体验与技术实现，从技术侧给产品合理的建议，在产品开过程中发挥技术影响力。
-- 技术规划能力：能够把握具体产品方向的研发工作，能制定和推动所负责产品线的业务规划，产出对于团队业务指标产生直接影响（如收入，PV，资源使用率，研发效率等）。能采用合适的技术，解决具体的技术难题，消除对产品的不利影响。
+- 规划能力：能够把握具体产品方向的研发工作，能制定和推动所负责产品线的业务规划，产出对于团队业务指标产生直接影响。能采用合适的技术，解决具体的技术难题，消除对产品的不利影响。
 
 
 
@@ -86,9 +83,6 @@
 
 
 ### 05.构建地图技能树
-- 对一部分人而言，学习新技能是一件极其困难的事情。很多人在学习的过程中，会遇到各种各样的问题。比如，不懂得如何进行知识归类、很难明确自己的学习目标等等。
-
-
 #### 5.1 什么是地图技能树
 - 所谓技能树，实际上就是把学习一种知识或技能所需要的分项知识与技能，通过树状图或思维导图式的视觉呈现方式构建出来。
 - 就个人技能树而言，它可能永远没有终点，你可以不断地往个人技能树上添加内容，比如追加新的分项知识与技能、记录自己的学习进展、添加各种学习资源等等。
@@ -96,10 +90,10 @@
 
 #### 5.2 为何构建地图技能树
 - 1.提高自我意识就提高自我意识而言，技能树主要解决了两个痛点：不清楚现在到底该学什么、不了解如何评估自己是否已达成既定学习目标。
-- 当你构建个人技能树时，需要思考并规划出所有相关的分项知识与技能，同时，还要标注出你目前在这些分项知识与技能方面的熟练或精通程度。这个过程可以帮助你对自己的实际情况做出评估。
-- 2.保持专注。很多人在学习的过程中会感到迷茫，不清楚自己到底该学什么。构建个人技能树的时候，你可以采用“二八定律”帮助自己做决策，明确自己最想要什么样的结果。
-- 3.引导你正确学习。你需要在自己的技能树中添加适合自己的学习材料，你可以通过网络搜索学习资源、请教身边的专业人士、参加讲座或者学习相关课程等等，获得学习材料。
-- 此外，你还需要平衡好各项学习资源，采取多种学习方式。比如，你可以读书、观看视频、亲身实践等等。
+- 2.当你构建个人技能树时，需要思考并规划出所有相关的分项知识与技能，还要标注出目前在这些知识与技能方面的熟练或精通程度。这个过程可以帮助你对自己的实际情况做出评估。
+- 3.保持专注。很多人在学习的过程中会感到迷茫，不清楚自己到底该学什么。构建个人技能树的时候，你可以采用“二八定律”帮助自己做决策，明确自己最想要什么样的结果。
+- 4.引导你正确学习。你需要在自己的技能树中添加适合自己的学习材料，你可以通过网络搜索学习资源、请教身边的专业人士、参加讲座或者学习相关课程等等，获得学习材料。
+- 5.构建技能地图，你可以平衡好各项学习资源，你可以知道不同技能对于你而言，需要投入的精力占比和优先级。
 
 
 #### 5.3 如何构建地图技能树
@@ -114,17 +108,4 @@
 
 
 
-### 06.思考需要流程化
-- 每次做成一件事情，学习一种技能，我都会想，能不能把这件事情设计成一个流程？那个针对不同的学习思考方法，能否输出成流程？
-- 大到公司里新的项目，运营方针，小到个人生活里的各种细节，都会想办法从中找出「能够复制和迁移」的关键，用流程的形式把它固化下来。
-- 可以是一系列步骤，可以是一个模型，可以是一套SOP，也可以是一张核对表……不一定要书面化储存，对于一些比较简单的流程，我也会先梳理一下，然后记在脑子里，需要的时候按部就班去用就好。
-- 一旦变成流程，也就意味着：当我再次面对类似的问题时，无需重复操心，可以直接调用我已有的流程来解决它。
-- 比起我花费脑力去分门别类地处理每一件事情，把一切都丢给流程，未必是最好的，但一定是最省力、最小化「不必要的麻烦」的。
-- 流程的本质是什么？是你自身「内在系统」的一部分，亦即你理解外部世界、处理新情境的一种加工模式。一个人成长的过程，很重要的一点，就是不断把新问题、新情境，内化进自己的系统里，成为自己系统的一部分。
 
-
-### 07.系统演化的路径
-- 如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：
-- 很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
-- 也就是说，对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
-- 这就需要你具备一个愿景和目标，并且，能够基于对愿景和自身本质的理解，决定每一个关键节点的方向，让系统始终保持一个稳定的方向。
