--- a/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
@@ -19,14 +19,18 @@
 
 
 ### 01.对待工作的态度
-- 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；
+- 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。
+- 一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；
 - 另外一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
-- 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。主动性的学习和工作是为了提升自己，获得更强大的竞争力，而不只是为了一份工作或者一个老板。
+- 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。
+- 主动性的学习和工作是为了提升自己，获得更强大的竞争力，而不只是为了一份工作或者一个老板。
 
 
 ### 02.我在为谁而工作
-- 换一个视角，把自己当成一家公司一样来经营，经营自己的工作和人生，可能就会有完全不同的体会。在这个视角下，老板就是你的客户，你的工作就是你为客户提供的产品或服务，而跳槽就是换客户。
-- 想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
+- 换一个视角，把自己当成一家公司一样来经营，经营自己的工作和人生，可能就会有完全不同的体会。
+- 在这个视角下，老板就是你的客户，你的工作就是你为客户提供的产品或服务，而跳槽就是换客户。
+- 想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？
+- 可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
 
 
 
@@ -40,7 +44,8 @@
 ### 04.经营自己如公司
 - 企业做买卖讲究供求关系一样，很多时候在职场上，决定你价值的，除了本身能提供的“产品和服务”外，还取决于行业内的供求关系。
 - 如果你的技能在人才市场上供过于求，那么你的身价自然会变低；如果你的技能在人才市场上供不应求，那么你的身价自然会相对较高。
-- 我们经营自己一般都要持续经营几十年之久，为了保证“基业长青”，还得围绕自己的主攻方向，努力打造自己的护城河。护城河可以是卓越的技术、专业的知识、深厚的经验、独特的资源、有影响力的个人品牌、优质的人脉网络、优秀的沟通协调能力、对未来的敏锐洞察等等。
+- 我们经营自己一般都要持续经营几十年之久，为了保证“基业长青”，还得围绕自己的主攻方向，努力打造自己的护城河。
+- 护城河可以是卓越的技术、专业的知识、深厚的经验、独特的资源、有影响力的个人品牌、优质的人脉网络、优秀的沟通协调能力、对未来的敏锐洞察等等。
 - 老板很苛刻，待遇很糟糕，我不是说你不可以跳槽，尽量让自己的简历好看一点，所以，哪怕在一个烂公司里，尽量做一些有价值的项目，做一些有价值的工作，经受一些技术挑战，不要总觉得自己吃了亏。说世间无伯乐，你没有努力和付出过，再好的伯乐也看不见你。
 - 不断加强自己的竞争性优势，让自己人生公司的越开越顺畅，选择也就会越来越多，比如当你对当前的客户不满意时，你就能随时终止这段合作关系，换一家客户。
 
@@ -58,7 +63,8 @@
 ### 06.公司和你的关系
 #### 6.1 好好沉淀自己
 - 谁都想去一个好的公司，能给未来的自己积累到最好的筹码。其实人生就是选择，机会往往稍纵即逝，关键在于自己不要后悔（当然后悔也是没用的）。
-- **很多人，在不断的选择、跳槽中，彻底迷失了自己。其实去任何公司，哪怕这个公司再烂，只要你足够用心，都能学到很多有用的东西，无心者去哪都一样**。我们都在找一个终点，但永远不知道他究竟在哪儿。与其这样，不如好好的完善自己。
+- **很多人，在不断的选择、跳槽中，彻底迷失了自己。其实去任何公司，哪怕这个公司再烂，只要你足够用心，都能学到很多有用的东西，无心者去哪都一样**。
+- 我们都在找一个终点，但永远不知道他究竟在哪儿。与其这样，不如好好的完善自己。
 - 牛逼的公司的确能给你一个光环，但不代表你就牛逼。**一定要在一家公司好好沉淀个三四年，切莫荒废了自己**。用人单位最看重的是什么？
 - 他们更看重你在以前公司积累的内在的东西，不是你平时做什么，而是你做出了什么成绩、你有什么资源、你在这个公司的成长轨迹、因为有你给这个公司带来了什么。
 
