--- a/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
+++ b/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
@@ -3,12 +3,9 @@
 - 02.做计划遇到疑惑
 - 03.做计划有何意义
 - 04.通过案例看计划
-- 05.实践目标要计划
-- 06.效率需要制计划
-- 07.资源也需要计划
-- 08.检查也需要计划
-- 09.总结也需要计划
+- 05.做计划优劣比较
 - 10.做计划闭环思维
+
 
 
 
@@ -76,34 +73,18 @@
 - 最后基于前面几个步骤，该怎么呈现出结果，这些数字或者结论能怎么反馈出这次的项目效果，可以做出什么策略调整？一切都需要做好详细的计划！
 
 
+### 05.做计划优劣比较
+#### 5.1 做计划反方说明
+- 1.没有计划，走到哪里算哪里，还美其名曰“顺其自然”，结果是陷入困境很难走出来。在现实生活中东碰西撞，毫无章法的瞎折腾，美其名曰“试错”。
 
 
 
-### 05.实践目标要计划
-#### 5.1 无计划目标不能“凸现”
-- 所有重要的目标都值得为它制定一个周密计划，为什么这么说？“值得”是说我们愿意为此投入时间和精力，做好计划是比较劳心费神的，因此才有“不要用战术上的勤奋来掩盖战略上的懒惰”一说。
-- 绝大多数人都是属于“让我们先干起来再说”的。然而，历史的经验告诉我们，任何重大目标的实现没有计划是不靠谱的。古人讲的“凡事预则立，不预则废。道理是一样的。
+#### 5.2 做计划正方说明
+- 1.绝大多数人都是属于“让我们先干起来再说”的。然而，历史的经验告诉我们，任何重大目标的实现没有计划是不靠谱的。古人讲的“凡事预则立，不预则废。道理是一样的。
 
 
-#### 5.2 无计划目标实现概率低
-- 也有人不同意上面的看法，他们对计划嗤之以鼻，认为这个是“书呆子”干的事，尤其是改革开放之初，许多人靠运气发了财，从此就“清华北大不如胆子大”了。
-- 殊不知，偶尔打个把胜仗不难，瞎猫碰上死耗子也是常有的事，做个“常胜将军”就不容易了，这个一定靠实力，而计划能力又是最基础的实力。
 
 
-#### 5.3 没有计划执行容易“跑偏”
-- 没有计划，走到哪里算哪里，还美其名曰“顺其自然”，结果是陷入困境很难走出来，常常讲“美妙的事情都是精心策划出来的，而坏事常常不请自来”。
-- 你为什么折腾这么多年毫无起色？为什么革命低潮如此漫长？难道心里没数吗？你总在描绘你那“美好的愿景”，就如窗户边上的飞虫，前途看起来一片光明，就是没有出路！还是好好做个计划，然后再在实践中持续优化，逼近目标。
-
-
-### 06.效率需要制计划
-#### 6.1 执行中会耗费更多时间
-- 凡是想不清楚的，做起来一定不能得心应手，做计划的过程就是尽量去理解达成目标的路上可能存在的问题的过程，避免事到临头再“病急乱投医”。
-- 虽然环境往往是不以人的意志力转移，许多人就以此为借口拒绝做计划，然后呢就是在现实生活中东碰西撞，毫无章法的瞎折腾，美其名曰“试错”。 
-
-
-#### 6.2 没有找到执行重心
-- 没有计划，就没有执行的重心，譬如农夫不把要种的庄稼种上，精心打理，土地荒在那里，杂草一定会丛生。
-- 每天关心各种各样的与自己八竿子打不着的事，因为没有计划，就好比没有自己该侍弄的庄稼，到了秋天了，好好侍弄庄稼的人大丰收了，你呢，坐在树桩边等兔子撞上来。
 
 
 #### 6.3 确保要事第一
