--- a/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
+++ b/Read/ReadBlogWiki/02.计划管理/01.为何要做好计划.md
@@ -4,8 +4,6 @@
 - 03.做计划有何意义
 - 04.通过案例看计划
 - 05.做计划优劣比较
-- 10.做计划闭环思维
-
 
 
 
@@ -60,8 +58,9 @@
 
 #### 4.2 所以要做计划
 - 那么为什么要做计划？目前是我们可以明确目标，然后去评估拥有的资源和当前情况，然后确定具体方案，最后才会有工作效率和工作质量的提升。
-- 做计划有五要素：Target、Why、When、Who、How，即做一件事之前先想清楚目标/目的是什么，为什么要做这件事？即痛点是什么？花多久时间去做这件事/项目？排期是多久？需要跨部门、组内协调资源吗？谁配合？技术方案/解决方案是什么？怎么去做？
-- 适用场景有哪些呢？小到简单的需求多问几个为什么？大到复杂的项目可以科学的规划，把控进度和节奏，能够给领导做及时的正向反馈，也能让需要配合的同事心里有数需要做什么？项目复盘可以完整地去回顾做了什么，有哪些价值点，非常方便。
+- 做计划有五要素：Target、Why、When、Who、How，即做一件事之前先想清楚目标/目的是什么，为什么要做这件事？即痛点是什么？
+- 花多久时间去做这件事/项目？排期是多久？需要跨部门、组内协调资源吗？谁配合？技术方案/解决方案是什么？怎么去做？适用场景有哪些呢？
+- 小到简单的需求多问几个为什么？大到复杂的项目可以科学的规划，把控进度和节奏，能够给领导做及时的正向反馈，也能让需要配合的同事心里有数需要做什么？
 
 
 
@@ -76,65 +75,19 @@
 ### 05.做计划优劣比较
 #### 5.1 做计划反方说明
 - 1.没有计划，走到哪里算哪里，还美其名曰“顺其自然”，结果是陷入困境很难走出来。在现实生活中东碰西撞，毫无章法的瞎折腾，美其名曰“试错”。
+- 2.譬如南辕北辙里的那个郑国人，仗着马车好，车夫水平高、盘缠多，就一意孤行。计划是节约资源，首先是节约时间资源的最重要工具。
+- 3.一些小打小闹的事，确实并不一定要做计划，譬如到厨房烧个菜、到超市买点啥的，这些日常琐事凭经验就行，做书面计划是“小题大做”，不免有点迂腐。
 
 
 
 #### 5.2 做计划正方说明
 - 1.绝大多数人都是属于“让我们先干起来再说”的。然而，历史的经验告诉我们，任何重大目标的实现没有计划是不靠谱的。古人讲的“凡事预则立，不预则废。道理是一样的。
+- 2.有了计划，你就知道每天最重要的事是啥，这个不搞好不要扯其他的事，你的时间精力全部聚焦到这个最需要解决的问题上来。长期积小流，也就可以“成江海”。
+- 3.有了计划之后，到达相关的时间节点，项目预定的完成度，都有明确的标准，只需要对应时间节点，就可对项目进程进行查验。
+- 4.计划是要因环境变化调整的，尤其是执行过程中各种各样的问题层出不穷，这个时候不能否定计划，而是完善和修订计划，计划是规定我们要做的事，需要的资源，何时应该完成。
+- 5.找到做计划背景或痛点。给自己制定目标。将目标分解成任务。计划的落地执行。计划可行性分析和调整。阶段总结和持续迭代。这样就逐步形成计划的闭环！
 
 
-
-
-
-
-#### 6.3 确保要事第一
-- 有了计划，你就知道每天最重要的事是啥，这个不搞好不要扯其他的事，你的时间精力全部聚焦到这个最需要解决的问题上来。长期积小流，也就可以“成江海”了。
-
-
-#### 6.4 把控任务进展效率
-- 如果不制定计划，我们很难做到全盘把控。有了计划之后，对于整个项目的进度，时间节点把控，完成情况，以及过程中出现的问题，都会有一个比较明确的判断。
-- 如果没有制定计划，项目的时长，完成度，都无法很好的判断。其次，如果不制定计划，很难做到协调统筹。有了计划之后，到达相关的时间节点，项目预定的完成度，都有明确的标准，只需要对应时间节点，就可对项目进程进行查验。
-  
-
-
-
-### 07.资源也需要计划
-#### 7.1 一切都是有成本的
-- “磨刀不误砍柴工”，计划的过程就是“磨刀”的过程，准备工作不充分只能是更多浪费时间，到了河边看到鱼很多才想起来网没有带不是瞎折腾功夫嘛。
-- 计划就是为你要达到的目标积极策划的过程，可能会遇到什么问题，需要做哪些准备？避免事到临头一筹莫展。发现不对再从头再来不是瞎折腾功夫是什么？
-
-
-#### 7.2 时间是最大成本
-- 也有人说，我们实力雄厚，不在乎走弯路的，譬如南辕北辙里的那个郑国人，仗着马车好，车夫水平高、盘缠多，就一意孤行。
-- 可是这个世界上没有人可以说他时间管够的，即便其他都不算，时间失去了，一切也都失去了！越富有的人越舍不得浪费时间。计划是节约资源，首先是节约时间资源的最重要工具。因此，为重要目标好好做计划是明智之举。
-
-
-#### 7.3 重复和遗漏免不了
-- 也有人觉得他很聪明，别人问起他计划在哪，他总说在他的脑子里装着呢，还让别人把心放到肚子里瞧好吧。我们相信，一些小打小闹的事，确实并不一定要做计划，譬如到厨房烧个菜、到超市买点啥的，这些日常琐事凭经验就行，做书面计划是“小题大做”，不免有点迂腐。
-- 但还是要想想，这个想想就最简易的计划。重大的事情，千头万绪，太烧脑，要想“不重不漏”，做个书面计划实在必不可少，所谓“好记性不如烂笔头”。
-
-
-### 08.检查也需要计划
-#### 8.1 没有计划就没有检查依据
-- “要什么计划，让我们先干起来吧”，干了一段时间，我们来看看干得怎么样了，因为没有计划，你干得怎么样都没有错，因为检查的依据没有，到哪里都没有错。于是检查就是随便看看，你好我好大家好。
-
-
-#### 8.2 无法检查就无法评价
-- 该怎么评价你的工作成效呢？没法评价，因为你没有书面的依据，没有参照物，你如何判断他的位置？
-- 于是一团乱麻，你看他每天也在忙忙碌碌，就是没有成效。有一句话说得非常好，你可以假装努力，只是结果是不会陪你玩的。
-
-
-#### 8.3 不能评价就不能奖惩
-- 评价不了，你凭啥奖励和惩罚别人，于是平均发奖，这个奖励没有任何效果，也许比不奖更糟糕，干好干坏一个样，如此和谐，组织衰败是迟早的事。
-
-
-### 09.总结也需要计划
-- 计划不是万能的，但没有计划是万万不能的。计划是要因环境变化调整的，尤其是执行过程中各种各样的问题层出不穷，这个时候不能否定计划，而是完善和修订计划，计划是规定我们要做的事，需要的资源，何时应该完成。至于完成事情的方式方法，需要因实际情况灵活运用。毕竟，目标就在那里。
-
-
-
-### 10.做计划闭环思维
-- 找到做计划背景或痛点。给自己制定目标。将目标分解成任务。计划的落地执行。计划可行性分析和调整。阶段总结和持续迭代。这样就逐步形成计划的闭环！
 
 
 
