--- a/Read/ReadBlogWiki/02.计划管理/03.计划拆分为任务.md
+++ b/Read/ReadBlogWiki/02.计划管理/03.计划拆分为任务.md
@@ -25,6 +25,7 @@
 - 把工作和生活中找到的不足之处当做自身的痛点来认真对待，在新的目标中，针对痛点部分进行着重的修正，可以切实有效的保证计划制定的现实意义与可行性。
 
 
+
 ### 02.什么事情要目标
 #### 2.1 清楚知道目标
 - 凡事对自己有重要意义的、需要花时间花精力去做的、还有很大提升空间的、需要去刻意练习的事情都应该要有目标。
@@ -83,6 +84,14 @@
 - 这就是细化，现在是不是觉得成为作家也是可以的，而且很简单。这样你还会焦虑吗？基本不会了。为什么呢？因为目标明确，可执行。
 
 
+#### 5.3 将工作任务细化
+- 在进行工作阶段分解过程中，一定要认真的将工作进行细化，要细化到月、周、日的级别，才能保证阶段分解真的有实际意义。
+- 日常工作中，经常会听到量化这一词，其实量化的意思，也就是将工作进行最小单位的细化，使之能够清晰的展现出每天做什么、每周做什么、每月做什么，这样一层一层的，得出季度收获，半年收获，年度收获。
+- 制定任务或目标时，要学会将大目标拆解成小目标，直到每一个小目标足够清晰、简单，具体，你一看就知道如何做到。
+- 任务分解一定要足够细，细到足够具体和可顺畅执行的程度，只要足够细，就没有难的任务。工作落地过程中，不怕细分，分的越细，往往工作效果越好，工作效率越高。
+
+
+
 
 ### 06.研究任务的特性
 - 研究任务的特性就是研究任务的重要程度、难易程度、自己可用来完成任务的时间、任务的时间特性。
@@ -131,6 +140,15 @@
 - 然后还要赋予任务特别的颜色含义，比如先将所有任务集中到一个excel表格，待到完成一个任务就将该任务标红，经常打开来看能起到一定的积极心理暗示作用。
 
 
+#### 8.3 TODO执行列表
+- 准备一个TODO笔记，把学什么这个问题抛给日常生活中。比如坐地铁的时候，看微信推送的文章，遇到自己没了解过的，把关键词记下来。
+- 在工作中，偶尔搜索问题的时候，发现自己一些某些未了解过的知识的时候，先记下来关键字；工作完成后，凭着关键字再回来学习。
+- 看书过程中，可能也会遇到一些点，书上写的不是非常的清晰，但是的确自己不了解，记下关键字。
+
+
+
+
+
 ### 09.目标拆任务案例
 #### 9.1 将目标拆分任务背景
 - 做计划犹如炒菜，同样的原料，同样的工具，两个人炒出来的味道却大相径庭，只因这是一个手艺活。
@@ -158,8 +176,7 @@
 - 5）将思维导图中的重要事项和关键节点填进“月度行程表”(主要是要会见的人、出差安排、开会、重要项目准备)。固定后，将这些内容输入手机，主要以与他人的约会事项为主。（工具3）
 - 6）生成代办事情总清单。随时对照检查和紧盯，完成一项就勾选一项。（范例4）
 - 7）生成交流清单、检查清单两类，每个被委托的人一张交流清单，每件关键任务一张检查清单。注意清单格式。（范例5）
-- 8）平时会发现一些遗漏部分，及时增补进入月计划和总清单。
-- 月计划的最终成果就是一张行程表+一系列的备忘清单。
+- 8）平时会发现一些遗漏部分，及时增补进入月计划和总清单。月计划的最终成果就是一张行程表+一系列的备忘清单。
 
 
 
