--- a/Read/ReadBlogWiki/02.计划管理/04.计划可行和调整.md
+++ b/Read/ReadBlogWiki/02.计划管理/04.计划可行和调整.md
@@ -21,17 +21,22 @@
 
 
 ### 03.时间周期的调整
-- 人们已经习惯了以年为单位来进行时间分界，所以我们都会习惯于做年度计划。在个人的时间感觉中，一年，似乎也算是挺长一段时间了，但在过去这么些年的计划与实践中，我学到的经验是：做计划不能靠模糊的感觉，而是需要精确理性的计算。
-- 一年，我们到底有多少时间？一个正常参与社会工作的人，时间大约会被平均分成三份。一年 52 周，会有一些法定的长假和个人的休假安排，我们先扣除两周用于休假。那么一天业余 8 小时，一年算 350 天，那么一年总共有 2800 小时的业余时间。
-- 但实际这 2800 小时里还包括了你全部的周末和一些零星的假期，再预扣除每周 8 小时用于休闲娱乐、处理各种社会关系事务等等，那么你还剩下 2400 小时。一年中你还需要把时间合理地分配在 “短、中、长” 三种不同周期的计划上。
-- 短期：完成事项，获取结果，得到即时反馈与成就感（比如：写这个专栏）。中期：学习技能，实践经验，积累能力（比如：学一门语言）。长期：建立信念，达成愿景（比如：成长为一名架构师）。
+- 人们已经习惯了以年为单位来进行时间分界，所以我们都会习惯于做年度计划。但在过去这么些年的计划与实践中，学到经验是：做计划不能靠模糊的感觉，而是需要精确理性的计算。
+- 一年，我们到底有多少时间？一个正常参与社会工作的人，时间大约会被平均分成三份。一年 52 周，会有一些法定的长假和个人的休假安排，我们先扣除两周用于休假。
+- 那么一天业余 8 小时，一年算 350 天，那么一年总共有 2800 小时的业余时间。
+- 但实际这 2800 小时里还包括了你全部的周末和一些零星的假期，再预扣除每周 8 小时用于休闲娱乐、处理各种社会关系事务等等，那么你还剩下 2400 小时。
+- 一年中你还需要把时间合理地分配在 “短、中、长” 三种不同周期的计划上。
+- 短期：完成事项，获取结果，得到即时反馈与成就感（比如：写这个专栏）。
+- 中期：学习技能，实践经验，积累能力（比如：学一门语言）。
+- 长期：建立信念，达成愿景（比如：成长为一名架构师）。
 - 你可以从时间的维度，看看你计划的时间安排是否合理分配在了不同周期的计划事项上。如果计划的事项和周期匹配错了，计划的执行就容易产生挫败感从而导致半途而废，曾经的我就犯过这样的错误。
 - 要让计划可行，就是选择合适的事项，匹配正确的周期，建立合理的预期，得到不断进步的反馈。
 
 
 ### 04.有兴趣执行下去
 - 那该如何选择有限的事项，才可能更有效地被执行下去呢？其中有一个很重要的因素：兴趣。
-- 有的人兴趣可能广泛些，有的人兴趣可能少一些，但每个人多多少少都会有些个人的兴趣爱好。对于兴趣广泛的人来说，这就有个选择取舍问题，若不取舍，都由着兴趣来驱动，计划个十几、二十件事，每样都浅尝辄止。
+- 有的人兴趣可能广泛些，有的人兴趣可能少一些，但每个人多多少少都会有些个人的兴趣爱好。
+- 对于兴趣广泛的人来说，这就有个选择取舍问题，若不取舍，都由着兴趣来驱动，计划个十几、二十件事，每样都浅尝辄止。
 - 实际从理性上来说价值不大，从感性上来说只能算是丰富了个人生活吧。
 
 
