--- a/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
+++ b/Read/ReadAndroid/00.方案实践/30.App安全防御实践.md
@@ -1,5 +1,5 @@
 #### 目录介绍
-- 01.整体概述
+- 01.整体概述说明
     - 1.1 项目背景
     - 1.2 思考问题
     - 1.3 常见方式
@@ -18,14 +18,15 @@
     - 3.4 TCP协议安全攻击
     - 3.5 防抓包安全
     - 3.6 so库加固检测
+    - 3.7 截屏录屏
 - 04.代码安全例子
     - 4.1 条件判断代码
     - 4.2 异常不要携带重要信息
     - 4.3 序列化安全问题
     - 4.4 三方库lib中类安全
     - 4.5 反射代码安全
-    - 4.6 扫描漏洞安全
-    - 4.7 公共组件安全
+    - 4.6 组件漏洞安全
+    - 4.7 硬编码安全
     - 4.9 作弊器攻击问题
 - 06.方案基础设计
     - 6.1 整体架构图
@@ -42,12 +43,15 @@
 
 
 
-### 01.整体概述
+
+### 01.整体概述说明
 #### 1.1 项目背景
 - 现在几乎所有App都是网络强相关的
     - 客户端展示的很多东西都是通过接口从服务器上获取的，服务器也会接收大量从客户端上传的数据，这两端在进行双向通信的时候，就很容易被第三方截获，导致数据被盗取、接口被盗刷。
-- App被其他逆向挂起
-    - 待完善
+- Android项目常见的安全
+    - 反编译代码。将jar文件转换成java代码 ，使用jd-gui工具打开classes-dex2jar.jar这个文件就能查看Java代码。
+    - dos攻击。DoS 是一种常见的网络攻击，有人也称其为“洪水攻击”。最常见的表现是，利用大量机器发送请求，将目标网站的带宽或者其他资源耗尽，导致其无法响应正常用户的请求。
+    - App被挂载。利用xposed攻击apk
 
 
 
@@ -66,13 +70,7 @@
 
 
 #### 1.3 常见方式
-- 什么是dos攻击
-    - DoS 是一种常见的网络攻击，有人也称其为“洪水攻击”。最常见的表现是，利用大量机器发送请求，将目标网站的带宽或者其他资源耗尽，导致其无法响应正常用户的请求。
-- 反解析apk攻击
-    - 利用xposed攻击apk
-- 那么归结起来，实际上就是这样几种模式：
-    - 代码反编译；so破解；中间人攻击
-
+- 
 
 
 #### 1.4 设计目标
@@ -108,7 +106,13 @@
 
 
 #### 2.4 中间人攻击风险
-
+- 中间人攻击，在客户端主要是防抓包
+    - 通过一些黑科技手段，抓包app的数据。哪怕是https这种安全协议！
+- 客户端抓包的突破口集中以下几点
+    - 第一点：必须链接代理，且跟Charles要具有相同ip。**思路：客户端是否可以判断网络是否被代理了**。
+    - 第二点：CA证书，这一块避免使用黑科技hook证书校验代码，或者拥有修改CA证书权限。**思路：集中在可以判断是否挂载**。
+    - 第三点：冒充中间人CA证书，在客户端client和服务端server之间篡改拦截数据。**思路：可以做CA证书校验**。
+    - 第四点：为了可以在7.0上抓包，App往往配置清单文件networkSecurityConfig。**思路：线上环境去掉该配置**。
 
 
 
@@ -123,6 +127,9 @@
     - 第二种：放在Java代码中，会把密钥拆成几个部分，然后通过一定算法计算合成完整的密钥。
     - 第三种：把密钥和加解密放so中
     - 第四种：so再做下签名校验
+- 秘钥及敏感信息
+    - 此类配置应当妥善存放，不要在类中硬编码敏感信息，可以使用JNI将敏感信息写到Native层。
+
 
 
 
@@ -166,9 +173,19 @@
     - So文件为APK中包含的动态链接库文件，Android利用NDK技术将C/C++语言实现的核心代码编译为So库文件供Java层调用。
     - So文件被破解可能导致应用的核心功能代码和算法泄露。攻击者利用核心功能与算法可轻易抓取到客户端的敏感数据，并对其解密，导致用户的隐私泄露或直接财产损失。
 - 解决方案
+    - 由于release签名的唯一性，可以考虑在native层进行签名的校验。如果签名不正确，直接让App crash。https://juejin.cn/post/6844903609197395976?searchId=20231030192753CFCCAB7732D5AC0A58BB#heading-3
     - 对so文件进行安全加固、可以使用第三方的安全平台so加固方案。
 
 
+
+#### 3.7 截屏录屏
+- 先说一下截屏攻击风险
+    - 截屏攻击是指在APP运行过程中，界面被监控并且截屏或者录屏。截屏攻击主要发生在APP登录、身份认证、资金操作等界面。
+    - Android5.0中增加了一个MediaProjection接口，它提供截屏或者录屏的服务，准许APP拥有截取屏幕或者记录系统音频的能力。
+    - 同时系统允许其他消息窗口覆盖在系统的录制提示上，从而在用户无感知的情况下启动录屏或者截屏工具。
+- 解决方案
+    - 在Activity的create()方法中调用：getWindow().setFlags(LayoutParams.FLAG_SECURE, LayoutParams.FLAG_SECURE)；
+    - 或者getWindow().addFlags(WindowManager.LayoutParams.FLAG_SECURE);来达到防止截屏攻击的目的。
 
 
 
@@ -183,7 +200,7 @@
     }
     ```
     - 这里的隐患是数值类型需要防范溢出，否则这不仅仅可能会带来逻辑错误，在特定情况下可能导致严重的安全漏洞。
-    - 从语言特性来说，Java 和 JVM 提供了很多基础性的改进，相比于传统的 C、C++等语言，对于数组越界等处理要完善的多，原生的避免了缓冲区溢出等攻击方式，提高了软件的安全性。但这并不代表完全杜绝了问题，Java 程序可能调用本地代码，也就是 JNI 技术，错误的数值可能导致 C/C++ 层面的数据越界等问题，这是很危险的。
+    - 从语言特性来说，Java 和 JVM 提供了很多基础性的改进，相比于传统的 C、C++等语言，对于数组越界等处理要完善的多，原生的避免了缓冲区溢出等攻击方式，提高了软件的安全性。但这并不代表完全杜绝了问题，Java 程序可能调用本地代码，也就是JNI 技术，错误的数值可能导致 C/C++ 层面的数据越界等问题，这是很危险的。
 - 所以，上面的条件判断，需要判断其数值范围，例如，写成类似下面结构。
     ```
     if (a < c – b)
@@ -239,14 +256,21 @@
         android:permission="${applicationId}.permission.WEB_ACTIVITY"
         android:exported="true"/>
     ```
-
-
-#### 4.7 公共组件安全
-- 风险提示说明
+- 公共组件安全风险提示说明
     - Activity、Service、Provider、Receiver四大组件若配置为android:exported =”true”，将可以被外部应用调用，这样存在安全隐患的风险。
 - 解决方案
     - 在应用的AndroidManifest.xml文件中，设置组件的android:exported 属性为false或者通过设置自定义权限来限制对这些组件的访问。
     - 值得一提的是，若部分功能使用前提是配置必须使用exported为true，这种情况开发者应该根据实际情况来进行集成。
+
+
+
+#### 4.7 硬编码安全
+- 1、密钥直接明文存在SharedPreferences文件中，这是最不安全的。
+- 2、密钥直接硬编码在Java代码中，这很不安全，dex文件很容易被逆向成java代码。
+- 3、将密钥分成不同的几段，有的存储在文件中、有的存储在代码中，最后将他们拼接起来，可以将整个操作写的很复杂，这因为还是在java层，逆向者只要花点时间，也很容易被逆向。
+- 4、用ndk开发，将密钥放在so文件，加密解密操作都在so文件里，这从一定程度上提高了的安全性，挡住了一些逆向者，但是有经验的逆向者还是会使用IDA破解的。
+- 5、在so文件中不存储密钥，so文件中对密钥进行加解密操作，将密钥加密后的密钥命名为其他普通文件，存放在assets目录下或者其他目录下，接着在so文件里面添加无关代码（花指令），虽然可以增加静态分析难度，但是可以使用动态调式的方法，追踪加密解密函数，也可以查找到密钥内容。
+- https://juejin.cn/post/6844903432499773448?searchId=20231030192753CFCCAB7732D5AC0A58BB
 
 
 
@@ -256,14 +280,20 @@
 
 
 
+
 #### 参考
 - APP端上通用安全体系建设
     - https://www.jianshu.com/p/cd63552eea05
-
-
-
-
-
+- Android SDK安全加固问题与分析
+  - https://juejin.cn/post/7249923343259910200?searchId=20231030192753CFCCAB7732D5AC0A58BB#heading-9
+- 我的 Android 应用安全方案梳理
+  - https://juejin.cn/post/7079794266045677575?searchId=20231030192753CFCCAB7732D5AC0A58BB#heading-1
+- Android App加固原理与技术历程
+  - https://juejin.cn/post/6844904176070164488?searchId=20231030192753CFCCAB7732D5AC0A58BB#heading-5
+- 值得细读！如何系统有效地提升 Android 代码的安全性？
+  - https://juejin.cn/post/6844903712750583815?searchId=20231030192753CFCCAB7732D5AC0A58BB
+- Android 应用安全防御措施
+  - https://juejin.cn/post/6844903473109008397?searchId=20231030192753CFCCAB7732D5AC0A58BB
 
 
 
